# chad-gtk

./: .clang-format  .gitignore  README.md  flake.nix  meson.build
po/: meson.build
src/: main.c  meson.build
